# Kernel-ROS-Sensor-Dashboard

./: Makefile  README.md  ads1115.c  bmp280.c  tmp102.c  user.c
graphicsviewer/: Makefile  SensorDashboardGUI  SensorDashboardGUI.pro  SensorsReader.cpp  SensorsReader.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_SensorsReader.cpp  moc_mainwindow.cpp  ui_mainwindow.h
install/: local_setup.sh  setup.sh
install/sensors_publisher/share/sensors_publisher/: package.dsv  package.sh
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/ros_publisher/lib/ros_publisher/: sensor_publisher
ros2_ws/install/ros_publisher/share/ros_publisher/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/ros_publisher/share/ros_publisher/cmake/: ros_publisherConfig.cmake
ros2_ws/log/: latest_build
ros2_ws/src/ros_publisher/: CMakeLists.txt  package.xml
ros2_ws/src/ros_publisher/src/: RawSensorsReader.cpp  RawSensorsReader.h  sensor_publisher.cpp
sensors_publisher/: CMakeLists.txt
sensors_publisher/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
sensors_publisher/install/sensors_publisher/lib/sensors_publisher/: sensor_publisher
sensors_publisher/install/sensors_publisher/share/sensors_publisher/: package.bash  package.ps1  package.sh  package.zsh
sensors_publisher/log/: latest_build
sensors_publisher/src/: sensor_publisher.cpp
(+2 files in other folders)
